Updated buttons + overflow fix

--- a/beta-2/css/style.less
+++ b/beta-2/css/style.less
@@ -15,6 +15,10 @@ body, html {
  padding: 0;
 }
 
+.overflow-hidden {
+    overflow-x: hidden;
+}
+
 body {
     margin: 0px;
     background-color: darken(@black, 10%);
@@ -233,7 +237,7 @@ body {
     color: rgba(255, 255, 255, 0.5) !important;
     margin-left: 10px;
     margin-top: 10px;
-
+    border-bottom: 3px solid rgba(0, 0, 0, 0.1);
     background-color: rgba(0, 0, 0, 0.1);
 }
 
